<?xml version="1.0"?>
<package>
  <name>android_apps</name>
  <version>0.3.0</version>
  <description>
    Applications for robot-android pairing..
  </description>
  <url type="website">http://ros.org/wiki/android_apps</url>
  <url type="repository">https://github.com/rosjava/android_apps</url>
  <url type="bugtracker">https://github.com/rosjava/android_apps/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="kattyokaccho3616@gmail.com">Kazuto Murase</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>android_core</build_depend>
  <build_depend>android_extras</build_depend>
  <build_depend>android_remocons</build_depend>
  <build_depend>rosjava_messages</build_depend>
</package>
