<?xml version="1.0"?>
<package>
  <name>android_apps</name>
  <version>0.1.0</version>
  <description>
    Android libraries and examples for gingerbread.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://www.ros.org/wiki/android_apps</url>
  <url type="repository">https://github.com/ros-java/android_apps</url>
  <url type="bugtracker">https://github.com/ros-java/android_apps/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="kattyokaccho3616@gmail.com">Kazuto Murase</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>android_app_chooser</run_depend>
  <run_depend>android_make_a_map</run_depend>
  <run_depend>android_map_manager</run_depend>
  <run_depend>android_map_nav</run_depend>
  <run_depend>android_teleop</run_depend>
  <export>
    <metapackage/>
  </export>
</package>

