<package>
  <name>android_apps_core_components</name>
  <version>0.1.0</version>
  <description>
    Components for android robot apps.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ros.org/wiki/android_apps_core_components</url>
  <url type="repository">https://github.com/ros-java/android_apps</url>
  <url type="bugtracker">https://github.com/ros-java/android_apps/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="kattyokaccho3616@gmail.com">Kazuto Murase</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_tools</build_depend>
  <build_depend>android_gingerbread</build_depend>
</package>
