<package>
  <name>android_map_manager</name>
  <version>0.1.0</version>
  <description>
    Android map manager.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ros.org/wiki/android_map_manager</url>
  <url type="repository">https://github.com/ros-java/android_apps</url>
  <url type="bugtracker">https://github.com/ros-java/android_apps/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="kattyokaccho3616@gmail.com">Kazuto Murase</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_tools</build_depend>
  <build_depend>android_apps_core_components</build_depend>
  <build_depend>android_honeycomb</build_depend>
  <!-- Dashboard components that kazuto had started -->
  <!-- <build_depend>turtlebot_core_components</build_depend> -->
  <!-- <build_depend>pr2_core_components</build_depend> -->
</package>
